crates/escalier_parser/src/snapshots/escalier_parser__tests__function_definition-4.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"(a, ...b) => true;\")"
---
Ok(
    Program {
        body: [
            ExprStmt(
                Expr {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 17,
                        },
                    },
                    span: 0..17,
                    kind: Lambda(
                        Lambda {
                            params: [
                                EFnParam {
                                    pat: Pattern {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 1,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 2,
                                            },
                                        },
                                        span: 1..2,
                                        kind: Ident(
                                            BindingIdent {
                                                name: "a",
                                                mutable: false,
                                                span: 1..2,
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 1,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 2,
                                                    },
                                                },
                                            },
                                        ),
                                        inferred_type: None,
                                    },
                                    type_ann: None,
                                    optional: false,
                                },
                                EFnParam {
                                    pat: Pattern {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 4,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 8,
                                            },
                                        },
                                        span: 4..8,
                                        kind: Rest(
                                            RestPat {
                                                arg: Pattern {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 7,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 8,
                                                        },
                                                    },
                                                    span: 7..8,
                                                    kind: Ident(
                                                        BindingIdent {
                                                            name: "b",
                                                            mutable: false,
                                                            span: 7..8,
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 7,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 8,
                                                                },
                                                            },
                                                        },
                                                    ),
                                                    inferred_type: None,
                                                },
                                            },
                                        ),
                                        inferred_type: None,
                                    },
                                    type_ann: None,
                                    optional: false,
                                },
                            ],
                            body: Block {
                                span: 13..17,
                                stmts: [
                                    Expr {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 13,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 17,
                                            },
                                        },
                                        span: 13..17,
                                        kind: Lit(
                                            Bool(
                                                Bool {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 13,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 17,
                                                        },
                                                    },
                                                    span: 13..17,
                                                    value: true,
                                                },
                                            ),
                                        ),
                                        inferred_type: None,
                                    },
                                ],
                            },
                            is_async: false,
                            return_type: None,
                            type_params: None,
                        },
                    ),
                    inferred_type: None,
                },
            ),
        ],
    },
)
